# spark-capture

./: README.md  pyproject.toml  zoo-project.json
docs/raw/: 0000__conversations.txt  0001__first-draft-data-format.json  0002__ideas-from-wing-cat-for-temple-of-focus-mechanism.json
src/sparkcapture/: __main__.py  cli.py
