[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-capture"
version = "0.1.0"
description = "A delightfully primitive spark capture tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "lionscliapp",
  "machine-root",
]

[project.scripts]
spark = "sparkcapture.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
